ci: ignore wrong versions of dcm4che/slapd-dcm4chee

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -17,4 +17,4 @@ updates:
       interval: "weekly"
     ignore:
       - dependency-name: "dcm4che/slapd-dcm4chee"
-        versions: ["3.x", "4.x", "5.x"]
+        versions: ["3.x.x", "4.x.x", "5.x.x"]
