--- a/dcm4chee/docker-compose.yml
+++ b/dcm4chee/docker-compose.yml
@@ -10,8 +10,8 @@ services:
     #   - "389:389"
     env_file: docker-compose.env
     volumes:
-      - ~/dcm4chee-arc/ldap:/var/lib/ldap
-      - ~/dcm4chee-arc/slapd.d:/etc/ldap/slapd.d
+      - ldap_data:/var/lib/ldap
+      - ldap_slapd_data:/etc/ldap/slapd.d
     networks:
       - dcm4chee_network
 
@@ -28,7 +28,7 @@ services:
     volumes:
       - /etc/localtime:/etc/localtime:ro
       - /etc/timezone:/etc/timezone:ro
-      - ~/dcm4chee-arc/db:/var/lib/postgresql/data
+      - db_data:/var/lib/postgresql/data
     networks:
       - dcm4chee_network
 
@@ -45,8 +45,8 @@ services:
       # - "9990:9990"
       # - "9993:9993"
       - "7300:11112" # DICOM
-      - "7400:2762"   # DICOM secured
-      - "7500:2575"   # HL7
+      - "7400:2762" # DICOM secured
+      - "7500:2575" # HL7
       - "7600:12575" # HL7 secured
     env_file: docker-compose.env
     environment:
@@ -58,8 +58,8 @@ services:
     volumes:
       - /etc/localtime:/etc/localtime:ro
       - /etc/timezone:/etc/timezone:ro
-      - ~/dcm4chee-arc/wildfly:/opt/wildfly/standalone
-      - ~/dcm4chee-arc/storage:/storage
+      - arc_wildfly_data:/opt/wildfly/standalone
+      - arc_storage_data:/storage
     networks:
       - dcm4chee_network
       - traefik_net
@@ -69,6 +69,13 @@ services:
       - "traefik.http.routers.dcm4chee.entrypoints=http"
       - "traefik.http.routers.dcm4chee.rule=Host(`dcm4chee.sotatek.works`)"
       - "traefik.http.services.dcm4chee.loadbalancer.server.port=8080"
+
+volumes:
+  ldap_data:
+  ldap_slapd_data:
+  db_data:
+  arc_wildfly_data:
+  arc_storage_data:
 
 networks:
   dcm4chee_network:
