feat(keycloak): add build context and update restart

--- a/keycloak/docker-compose.yaml
+++ b/keycloak/docker-compose.yaml
@@ -2,6 +2,9 @@ services:
   keycloak:
     container_name: keycloak_sotamed
     image: sotamed-keycloak:0.0.1
+    build:
+      context: .
+    restart: unless-stopped
     ports:
       # - "6102:8080"
       - "6102:8443"
