--- a/keycloak/docker-compose.yaml
+++ b/keycloak/docker-compose.yaml
@@ -5,6 +5,8 @@ services:
     build:
       context: .
     restart: unless-stopped
+    depends_on:
+      - db
     ports:
       # - "6102:8080"
       - "6102:8443"
