--- a/keycloak/docker-compose.yaml
+++ b/keycloak/docker-compose.yaml
@@ -1,15 +1,15 @@
 services:
   keycloak:
     container_name: keycloak_sotamed
-    image: sotamed-keycloak:0.0.1
+    image: sotamed-keycloak:0.0.2
     build:
       context: .
     restart: unless-stopped
     depends_on:
       - db
     ports:
-      # - "6102:8080"
-      - "6102:8443"
+      - "6102:8080"
+      #- "6200:8443"
       - "6500:9000"
     environment:
       - KC_BOOTSTRAP_ADMIN_USERNAME=admin
@@ -19,33 +19,12 @@ services:
       - KC_DB_USERNAME=keycloak
       - KC_DB_PASSWORD=keycloak
       - KC_HTTP_ENABLED=true
-      - PROXY_ADDRESS_FORWARDING=true
-      - KEYCLOAK_FRONTEND_URL=https://keycloak.sotatek.works
-      - KC_PROXY=edge
       - KC_HOSTNAME_STRICT=false
-      - KC_HOSTNAME_STRICT_HTTPS=false
-      - KC_HOSTNAME_STRICT_BACKCHANNEL=false
-      - KC_HOSTNAME_ADMIN_URL=https://keycloak.sotatek.works
-        #- KC_HTTPS_CERTIFICATE_FILE=/certs/wildcard.sotatek.works.crt
-        #- KC_HTTPS_CERTIFICATE_KEY_FILE=/certs/wildcard.sotatek.works.key
-    command: start --optimized --hostname=keycloak.sotatek.works --proxy-headers=xforwarded
+      - KC_PROXY_HEADERS=xforwarded
+    command: start --optimized --hostname=https://keycloak.sotatek.works
     networks:
       - db_net
       - keycloak_net
-      # - traefik_net
-    volumes:
-      - ./certs:/certs
-    # labels:
-    #   - "traefik.enable=true"
-    #   # HTTP
-    #   - "traefik.http.routers.keycloak.entrypoints=http"
-    #   - "traefik.http.routers.keycloak.rule=Host(`keycloak.sotatek.works`)"
-    #   - "traefik.http.routers.keycloak.middlewares=redirect-https@file"
-    #   # HTTPS
-    #   - "traefik.http.routers.keycloak-https.entrypoints=https"
-    #   - "traefik.http.routers.keycloak-https.rule=Host(`keycloak.sotatek.works`)"
-    #   - "traefik.http.routers.keycloak-https.tls=true"
-    #   - "traefik.http.services.keycloak-https.loadbalancer.server.port=8080"
 
   db:
     image: postgres:17.5
@@ -75,5 +54,3 @@ networks:
   db_net:
   keycloak_net:
     name: keycloak_net
-  # traefik_net:
-  #   external: true
