--- a/minio/docker-compose.yml
+++ b/minio/docker-compose.yml
@@ -1,7 +1,7 @@
 services:
   minio:
     container_name: minio
-    image: minio/minio
+    image: minio/minio:RELEASE.2025-07-23T15-54-02Z
     restart: always
     ports:
       - "6000:9000"
