--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -11,6 +11,7 @@ updates:
     directories:
       - "/dcm4chee"
       - "/grafana"
+      - "/minio"
       - "/otel"
       - "/traefik"
     schedule:
