--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -18,4 +18,8 @@ updates:
       interval: "weekly"
     ignore:
       - dependency-name: "dcm4che/slapd-dcm4chee"
-        versions: ["3.x.x", "4.x.x", "5.x.x"]
+        update-types: ["version-update:semver-minor", "version-update:semver-major"]
+      - dependency-name: "dcm4che/postgres-dcm4chee"
+        versions: [">= 17.0.0"]
+      - dependency-name: "dcm4che/dcm4chee-arc-psql"
+        versions: [">= 5.33.0"]
