--- a/minio/docker-compose.yml
+++ b/minio/docker-compose.yml
@@ -4,14 +4,26 @@ services:
     image: minio/minio:RELEASE.2025-07-23T15-54-02Z
     restart: always
     ports:
-      - "6000:9000"
-      - "6501:9001"
+      - "9000:9000"
+      - "9001:9001"
     environment:
       MINIO_ROOT_USER: "minio"
       MINIO_ROOT_PASSWORD: "123@1234"
     volumes:
       - minio_data:/data
     command: server /data --console-address ":9001"
+    networks:
+      - minio_net
+
+  minio-setup:
+    image: minio/mc:latest
+    container_name: minio-setup
+    depends_on:
+      - minio
+    volumes:
+      - ./setup-minio.sh:/setup-minio.sh
+    entrypoint: [ "sh", "/setup-minio.sh" ]
+    restart: "no"
     networks:
       - minio_net
 
