--- a/minio/docker-compose.yml
+++ b/minio/docker-compose.yml
@@ -4,8 +4,8 @@ services:
     image: minio/minio:RELEASE.2025-07-23T15-54-02Z
     restart: always
     ports:
-      - "9000:9000"
-      - "9001:9001"
+      - "6000:9000"
+      - "6501:9001"
     environment:
       MINIO_ROOT_USER: "minio"
       MINIO_ROOT_PASSWORD: "123@1234"
@@ -21,8 +21,8 @@ services:
     depends_on:
       - minio
     volumes:
-      - ./setup-minio.sh:/setup-minio.sh
-    entrypoint: [ "sh", "/setup-minio.sh" ]
+      - ./setup:/setup
+    entrypoint: [ "sh", "/setup/setup-minio.sh" ]
     restart: "no"
     networks:
       - minio_net
