--- a/keycloak/docker-compose.yaml
+++ b/keycloak/docker-compose.yaml
@@ -14,6 +14,7 @@ services:
     environment:
       - KC_BOOTSTRAP_ADMIN_USERNAME=admin
       - KC_BOOTSTRAP_ADMIN_PASSWORD=admin
+      - KC_DB=postgres
       - KC_DB_URL_HOST=keycloak_db
       - KC_DB_PORT=5432
       - KC_DB_USERNAME=keycloak
