--- a/minio/docker-compose.yml
+++ b/minio/docker-compose.yml
@@ -1,7 +1,10 @@
 services:
   minio:
     container_name: minio
-    image: minio/minio:RELEASE.2025-07-23T15-54-02Z
+    image: sotamed-minio:0.0.1
+    build:
+      context: .
+      dockerfile: Dockerfile
     restart: always
     ports:
       - "6000:9000"
@@ -9,21 +12,9 @@ services:
     environment:
       MINIO_ROOT_USER: "minio"
       MINIO_ROOT_PASSWORD: "123@1234"
+      MINIO_ALIAS_URL: http://10.4.40.187:6000
     volumes:
       - minio_data:/data
-    command: server /data --console-address ":9001"
-    networks:
-      - minio_net
-
-  minio-setup:
-    image: minio/mc:latest
-    container_name: minio-setup
-    depends_on:
-      - minio
-    volumes:
-      - ./setup:/setup
-    entrypoint: [ "sh", "/setup/setup-minio.sh" ]
-    restart: "no"
     networks:
       - minio_net
 
