--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -14,6 +14,7 @@ updates:
       - "/grafana"
       - "/otel"
       - "/traefik"
+      - "/mockoon"
     schedule:
       interval: "weekly"
     ignore:
